--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,8 @@
+---
 name: Java CI
 on:
-  - push
-  - pull_request
+  push:
+  pull_request:
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -12,6 +13,6 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-          cache: maven
+            cache: 'maven'
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots verify
